--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
  html, body { height: 100%; margin: 0; background: #000; color: #fff; }
   body { font-family: sans-serif; text-align: center; }
   a, a:visited { color: #9bd; }
+.footer {
+  position: relative;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+  margin-top: 20px; 
+}
 </style>
 <link rel="stylesheet" href="erikastyle.css">
 
@@ -70,16 +78,20 @@
       <img src="IMG_8470.jpeg" alt="Erika Novitsky" style="max-width: 100%; height: auto;" class="scroll-reveal">
       <img src="IMG_8467.jpeg" style="float: left; width: 49%; margin-right: 1%; margin-bottom: 0.5em;" class="scroll-reveal">
       <img src="IMG_8454.jpeg" style="float: left; width: 49%; margin-right: 1%; margin-bottom: 0.5em;" class="scroll-reveal">
-      <img src="Screenshot 2026-02-21 at 21.39.53.png" style="float: left; width: 28%; margin-right: 1%; margin-bottom: 0.5em;" class="scroll-reveal">
-      <img src="Screenshot 2026-02-21 at 21.40.01.png" style="float: left; width: 35%; margin-right: 1%; margin-bottom: 0.5em;" class="scroll-reveal">
-      <img src="Screenshot 2026-02-21 at 21.41.21.png" style="float: left; width: 34%; margin-right: 1%; margin-bottom: 0.5em;" class="scroll-reveal">
+      <img src="Screenshot 2026-02-21 at 21.39.53.png" style="float: right; width: 27%; margin-right: 1%; margin-bottom: 0.5em;" class="scroll-reveal">
+      <img src="Screenshot 2026-02-21 at 21.40.01.png" style="float: right; width: 35%; margin-right: 1%; margin-bottom: 0.5em;" class="scroll-reveal">
+      <img src="Screenshot 2026-02-21 at 21.41.21.png" style="float: right; width: 35%; margin-right: 1%; margin-bottom: 0.5em;" class="scroll-reveal">
+   <br><br>
     </div>
   </main>
   </p>
+<br>
 <footer>
+<div class="footer">
   <hr>
   Website Design: Elijah Rock</br>
 &copy; 2026 Erika Novitsky. All rights reserved. <br>
+</div>
 </footer>
 <br>
 
