--- a/aliens.html
+++ b/aliens.html
@@ -59,10 +59,16 @@
 <br><br><br><br>
   <div class="parent-container">
     <div class="centered-box">
-       A short comic about aliens coming soon
+       ALIEN
 </div>
 </div>
-<img src="Screenshot 2026-02-21 at 21.39.23.png" style="width: 600px; margin-right: 1%; margin-bottom: 0.5em;" class="scroll-reveal">
+<img src="ErikaNovitsky_Specimen_1.png" style="width: 600px; margin-right: 1%; margin-bottom: 0.5em;" class="scroll-reveal">
+<img src="ErikaNovitsky_Specimen_2.png" style="width: 600px; margin-right: 1%; margin-bottom: 0.5em;" class="scroll-reveal">
+<img src="ErikaNovitsky_Specimen_3.png" style="width: 600px; margin-right: 1%; margin-bottom: 0.5em;" class="scroll-reveal">
+<img src="ErikaNovitsky_Specimen_4.png" style="width: 600px; margin-right: 1%; margin-bottom: 0.5em;" class="scroll-reveal">
+<img src="ErikaNovitsky_Specimen_5.png" style="width: 600px; margin-right: 1%; margin-bottom: 0.5em;" class="scroll-reveal">
+<img src="ErikaNovitsky_Specimen_6.png" style="width: 600px; margin-right: 1%; margin-bottom: 0.5em;" class="scroll-reveal">
+<img src="ErikaNovitsky_Specimen_7.png" style="width: 600px; margin-right: 1%; margin-bottom: 0.5em;" class="scroll-reveal">
 </main>
 
 
