--- a/erikaabout.html
+++ b/erikaabout.html
@@ -59,7 +59,7 @@
    <image src="IMG_3762.jpeg" alt="Erika Novitsky" style="max-width: 100%; height: auto;" class="scroll-reveal">
 <div class="parent-container">
     <div class="centered-box">
-        My name is Erika Novitsky. I am a BFA at the University of Southern California. I focus on illilstation and narrative art.
+        My name is Erika Novitsky. I am a BFA at the University of Southern California. I focus on illustration and narrative art. 
     </div>
 </div>
 </main>
