--- a/2023work.html
+++ b/2023work.html
@@ -31,7 +31,7 @@
   <div class="dropdown-content">
   </div>
 </div>
-    <<div class="dropdown">
+    <div class="dropdown">
   <button class="dropbtn" onclick="window.location.href='comics.html'">Comics</button>
   <div class="dropdown-content">
   </div>
