--- a/2024work.html
+++ b/2024work.html
@@ -9,7 +9,7 @@
 </style>
 <link rel="stylesheet" href="erikastyle.css">
 
-<div id="overlay">
+<div class="top-bar">
 </head>
 <body>
      <section>
@@ -56,6 +56,7 @@
 </div>
 <p>
 <main>
+    <br><br><br><br>
   <div class="parent-container">
     <div class="centered-box">
        2024 coming soon
