--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </style>
 <link rel="stylesheet" href="erikastyle.css">
 
-<div id="overlay">
+<div class="top-bar">
 </head>
 <body>
     <section>
