--- a/aliens.html
+++ b/aliens.html
@@ -9,7 +9,7 @@
 </style>
 <link rel="stylesheet" href="erikastyle.css">
 
-<div id="overlay">
+<div class="top-bar">
 </head>
 <body>
      <section>
