--- a/2025work.html
+++ b/2025work.html
@@ -69,6 +69,30 @@
         <p>Acrylic on canvas, October 2025</p>
     </div>
 </div>
+ <div class="image-container">
+  <img src="BirdKnight.png" alt="Description of image" style="width: 600px; margin-right: auto; margin-left: auto; display: block;" class="scroll-reveal">
+  <div class="overlay-text">
+        <p>Digital/p>
+    </div>
+</div>
+ <div class="image-container">
+  <img src="MomoSheet.png" alt="Description of image" style="width: 600px; margin-right: auto; margin-left: auto; display: block;" class="scroll-reveal">
+  <div class="overlay-text">
+        <p>Digital</p>
+    </div>
+</div>
+ <div class="image-container">
+  <img src="PirateMonkey.png" alt="Description of image" style="width: 600px; margin-right: auto; margin-left: auto; display: block;" class="scroll-reveal">
+  <div class="overlay-text">
+        <p>Digital</p>
+    </div>
+</div>
+ <div class="image-container">
+  <img src="IMG_8470.jpeg" alt="Description of image" style="width: 600px; margin-right: auto; margin-left: auto; display: block;" class="scroll-reveal">
+  <div class="overlay-text">
+        <p>Marker and ink on paper</p>
+    </div>
+</div>
 <br><br><br>
 </main>
 
