--- a/2026work.html
+++ b/2026work.html
@@ -56,11 +56,20 @@
 </div>
 <p>
 <main>
- <br><br><br><br>
-  <div class="parent-container">
-    <div class="centered-box">
-       2026 coming soon
+   <br><br><br><br>
+<div class="image-container">
+  <img src="dinosaurvaluestudy.png" alt="Description of image" style="width: 600px; margin-right: auto; margin-left: auto; display: block;" class="scroll-reveal">
+  <div class="overlay-text">
+        <p>Digital, February 2026</p>
+    </div>
 </div>
+  <div class="image-container">
+  <img src="directrex.png" alt="Description of image" style="width: 600px; margin-right: auto; margin-left: auto; display: block;" class="scroll-reveal">
+  <div class="overlay-text">
+        <p>Digital, February 2026</p>
+    </div>
+</div>
+<br><br><br>
 </main>
 
 
