fix image loading

--- a/2026work.html
+++ b/2026work.html
@@ -64,7 +64,7 @@
     </div>
 </div>
   <div class="image-container">
-  <img src="directrex.png" alt="Description of image" style="width: 600px; margin-right: auto; margin-left: auto; display: block;" class="scroll-reveal">
+  <img src="DirectRex.png" alt="Description of image" style="width: 600px; margin-right: auto; margin-left: auto; display: block;" class="scroll-reveal">
   <div class="overlay-text">
         <p>Digital, February 2026</p>
     </div>
