--- a/exploring.html
+++ b/exploring.html
@@ -59,10 +59,11 @@
 <br><br><br><br>
   <div class="parent-container">
     <div class="centered-box">
-       exploring coming soon
+       EXPLORING
 </div>
 </div>
 <img src="Screenshot 2026-02-21 at 21.39.16.png" style="width: 600px; margin-right: 1%; margin-bottom: 0.5em;" class="scroll-reveal">
+<img src="comicpage2FINAL.png" style="width: 600px; margin-right: 1%; margin-bottom: 0.5em;" class="scroll-reveal">
 </main>
 
 
